--- a/JouezFrancais/index.html
+++ b/JouezFrancais/index.html
@@ -13,7 +13,7 @@
       </script>
     </head>
     <body>
-      <div id="homepage"></div>
+      <div id="homepage"/>
       <!-- built files will be auto injected -->
     </body>
   </html>
